[gd_scene load_steps=18 format=2]

[ext_resource path="res://Models/Material_002.material" type="Material" id=1]
[ext_resource path="res://Models/bitmap.material" type="Material" id=2]
[ext_resource path="res://Models/Material_001.material" type="Material" id=3]
[ext_resource path="res://Textures/Other/HudIcons.png" type="Texture" id=4]
[ext_resource path="res://Materials/EmissionGreenHUD.material" type="Material" id=5]
[ext_resource path="res://Scripts/Player/HUD.gd" type="Script" id=6]
[ext_resource path="res://Materials/EmissionRedHUD.material" type="Material" id=7]
[ext_resource path="res://Materials/EmissionYellowHUD.material" type="Material" id=8]
[ext_resource path="res://Materials/EmissionBlueHUD.material" type="Material" id=9]

[sub_resource type="ArrayMesh" id=1]
surfaces/0 = {
"aabb": AABB( -0.155273, 0, -0.5, 0.310557, 1e-05, 1.00001 ),
"array_data": PoolByteArray( 0, 0, 31, 62, 0, 0, 0, 0, 0, 0, 0, 63, 0, 126, 0, 0, 127, 0, 0, 129, 0, 60, 0, 60, 0, 0, 31, 62, 0, 0, 0, 0, 0, 0, 0, 191, 0, 126, 0, 0, 127, 0, 0, 129, 0, 60, 0, 0, 0, 0, 31, 190, 0, 0, 0, 0, 0, 0, 0, 191, 0, 126, 0, 0, 127, 0, 0, 129, 0, 0, 0, 0, 0, 0, 31, 190, 0, 0, 0, 0, 0, 0, 0, 63, 0, 126, 0, 0, 127, 0, 0, 129, 0, 0, 0, 60 ),
"array_index_data": PoolByteArray( 3, 0, 2, 0, 1, 0, 3, 0, 1, 0, 0, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 6,
"material": ExtResource( 2 ),
"name": "bitmap.002",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 4
}

[sub_resource type="SpatialMaterial" id=2]
render_priority = 10
flags_unshaded = true
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98
albedo_texture = ExtResource( 4 )

[sub_resource type="ArrayMesh" id=4]
surfaces/0 = {
"aabb": AABB( 0, 0, -0.0445806, 2, 1e-05, 0.0891712 ),
"array_data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 32, 154, 54, 61, 0, 126, 0, 0, 127, 0, 0, 129, 0, 0, 0, 60, 0, 0, 0, 64, 0, 0, 0, 0, 32, 154, 54, 61, 0, 126, 0, 0, 127, 0, 0, 129, 0, 60, 0, 60, 0, 0, 0, 64, 0, 0, 0, 0, 32, 154, 54, 189, 0, 126, 0, 0, 127, 0, 0, 129, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 32, 154, 54, 189, 0, 126, 0, 0, 127, 0, 0, 129, 0, 0, 0, 0 ),
"array_index_data": PoolByteArray( 3, 0, 2, 0, 1, 0, 3, 0, 1, 0, 0, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 6,
"material": ExtResource( 3 ),
"name": "Plane",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 4
}

[sub_resource type="ArrayMesh" id=5]
surfaces/0 = {
"aabb": AABB( 0, 0, 0.209529, 2, 1e-05, 0.0891712 ),
"array_data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 226, 237, 152, 62, 0, 126, 0, 0, 127, 0, 0, 129, 0, 0, 0, 60, 0, 0, 0, 64, 0, 0, 0, 0, 226, 237, 152, 62, 0, 126, 0, 0, 127, 0, 0, 129, 0, 60, 0, 60, 0, 0, 0, 64, 0, 0, 0, 0, 180, 142, 86, 62, 0, 126, 0, 0, 127, 0, 0, 129, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 180, 142, 86, 62, 0, 126, 0, 0, 127, 0, 0, 129, 0, 0, 0, 0 ),
"array_index_data": PoolByteArray( 3, 0, 2, 0, 1, 0, 3, 0, 1, 0, 0, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 6,
"material": ExtResource( 3 ),
"name": "Plane.002",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 4
}

[sub_resource type="ArrayMesh" id=6]
surfaces/0 = {
"aabb": AABB( 0, 0, 0.463638, 2, 1e-05, 0.0891712 ),
"array_data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 64, 132, 13, 63, 0, 126, 0, 0, 127, 0, 0, 129, 0, 0, 0, 60, 0, 0, 0, 64, 0, 0, 0, 0, 64, 132, 13, 63, 0, 126, 0, 0, 127, 0, 0, 129, 0, 60, 0, 60, 0, 0, 0, 64, 0, 0, 0, 0, 248, 97, 237, 62, 0, 126, 0, 0, 127, 0, 0, 129, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 248, 97, 237, 62, 0, 126, 0, 0, 127, 0, 0, 129, 0, 0, 0, 0 ),
"array_index_data": PoolByteArray( 3, 0, 2, 0, 1, 0, 3, 0, 1, 0, 0, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 6,
"material": ExtResource( 3 ),
"name": "Plane.003",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 4
}

[sub_resource type="ArrayMesh" id=3]
surfaces/0 = {
"aabb": AABB( 0, 0, 0.717747, 2, 1e-05, 0.0891712 ),
"array_data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 143, 145, 78, 63, 0, 126, 0, 0, 127, 0, 0, 129, 0, 0, 0, 60, 0, 0, 0, 64, 0, 0, 0, 0, 143, 145, 78, 63, 0, 126, 0, 0, 127, 0, 0, 129, 0, 60, 0, 60, 0, 0, 0, 64, 0, 0, 0, 0, 75, 190, 55, 63, 0, 126, 0, 0, 127, 0, 0, 129, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 75, 190, 55, 63, 0, 126, 0, 0, 127, 0, 0, 129, 0, 0, 0, 0 ),
"array_index_data": PoolByteArray( 3, 0, 2, 0, 1, 0, 3, 0, 1, 0, 0, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 6,
"material": ExtResource( 3 ),
"name": "Plane.004",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 4
}

[sub_resource type="ArrayMesh" id=7]
surfaces/0 = {
"aabb": AABB( 0, 0, -0.0445806, 2, 1e-05, 0.851499 ),
"array_data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 143, 145, 78, 63, 0, 126, 0, 0, 127, 0, 0, 129, 0, 0, 0, 60, 0, 0, 0, 64, 0, 0, 0, 0, 143, 145, 78, 63, 0, 126, 0, 0, 127, 0, 0, 129, 0, 60, 0, 60, 0, 0, 0, 64, 0, 0, 0, 0, 75, 190, 55, 63, 0, 126, 0, 0, 127, 0, 0, 129, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 75, 190, 55, 63, 0, 126, 0, 0, 127, 0, 0, 129, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 32, 154, 54, 61, 0, 126, 0, 0, 127, 0, 0, 129, 0, 0, 0, 60, 0, 0, 0, 64, 0, 0, 0, 0, 32, 154, 54, 61, 0, 126, 0, 0, 127, 0, 0, 129, 0, 60, 0, 60, 0, 0, 0, 64, 0, 0, 0, 0, 32, 154, 54, 189, 0, 126, 0, 0, 127, 0, 0, 129, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 32, 154, 54, 189, 0, 126, 0, 0, 127, 0, 0, 129, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 226, 237, 152, 62, 0, 126, 0, 0, 127, 0, 0, 129, 0, 0, 0, 60, 0, 0, 0, 64, 0, 0, 0, 0, 226, 237, 152, 62, 0, 126, 0, 0, 127, 0, 0, 129, 0, 60, 0, 60, 0, 0, 0, 64, 0, 0, 0, 0, 180, 142, 86, 62, 0, 126, 0, 0, 127, 0, 0, 129, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 180, 142, 86, 62, 0, 126, 0, 0, 127, 0, 0, 129, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 132, 13, 63, 0, 126, 0, 0, 127, 0, 0, 129, 0, 0, 0, 60, 0, 0, 0, 64, 0, 0, 0, 0, 64, 132, 13, 63, 0, 126, 0, 0, 127, 0, 0, 129, 0, 60, 0, 60, 0, 0, 0, 64, 0, 0, 0, 0, 248, 97, 237, 62, 0, 126, 0, 0, 127, 0, 0, 129, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 248, 97, 237, 62, 0, 126, 0, 0, 127, 0, 0, 129, 0, 0, 0, 0 ),
"array_index_data": PoolByteArray( 3, 0, 1, 0, 0, 0, 3, 0, 2, 0, 1, 0, 7, 0, 5, 0, 4, 0, 7, 0, 6, 0, 5, 0, 11, 0, 9, 0, 8, 0, 11, 0, 10, 0, 9, 0, 15, 0, 13, 0, 12, 0, 15, 0, 14, 0, 13, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 24,
"material": ExtResource( 1 ),
"name": "Plane.007",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 16
}

[sub_resource type="SpatialMaterial" id=8]
render_priority = 9
flags_transparent = true
flags_unshaded = true
params_depth_draw_mode = 1
albedo_color = Color( 0, 0, 0, 0.733333 )

[node name="HUD" type="Spatial"]
script = ExtResource( 6 )

[node name="Icons" type="MeshInstance" parent="."]
layers = 2
cast_shadow = 0
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="BarSprint" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.200166, 0, -0.393408 )
layers = 2
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = ExtResource( 9 )

[node name="BarJump" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.200166, 0, -0.393408 )
layers = 2
cast_shadow = 0
mesh = SubResource( 5 )
material/0 = ExtResource( 5 )

[node name="BarAmno" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.200166, 0, -0.393408 )
layers = 2
cast_shadow = 0
mesh = SubResource( 6 )
material/0 = ExtResource( 8 )

[node name="BarHealth" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.200166, 0, -0.393408 )
layers = 2
cast_shadow = 0
mesh = SubResource( 3 )
material/0 = ExtResource( 7 )

[node name="BarsBackground" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.200166, -0.0108776, -0.393408 )
layers = 2
cast_shadow = 0
mesh = SubResource( 7 )
material/0 = SubResource( 8 )
